--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Css Sheet -->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Icon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Calistoga&display=swap" rel="stylesheet">
@@ -63,9 +65,11 @@
             </div>
             <div class="row about-row-margin">
                 <div class="col-lg-6 about-para text-uppercase font-weight-bold">
-                    <p>I am a fresh graduate from Universiti Teknologi Malaysia (UTM) major in Engineering (Electrical-Mechatronics). However, I intend to pursue my career as a front-end web developer. This is because I am very passsionate to develop websites that are responsive for user. This website is a startup project that I have developed by myself using HTML5, CSS3, JavaScript and React. Feel free to look around and get in touch!</p>
+                    <p>I am a fresh graduate from Universiti Teknologi Malaysia (UTM) major in Engineering (Electrical-Mechatronics). However, I intend to pursue my career as a front-end web developer. This is because I am very passsionate to develop websites that are responsive for user. This website is a startup project that I have developed by myself using HTML5, CSS3, and Javascript. Feel free to look around and get in touch!</p>
                     <div class="btn-pos">
-                        <button type="button" class="btn btn-outline-dark btn-lg btn-spc">RESUME</button>
+                        <a href="Luqman Hakim Bin Mohd Zolkipli.pdf" target="_blank">
+                            <button type="button" class="btn btn-outline-dark btn-lg btn-spc">RESUME</button>
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center">
@@ -85,9 +89,9 @@
                 <div class="col-lg-4 box-img"><img src="image/sass.png" class="shake"></div>
             </div>
             <div class="row text-center">
-                <div class="col-lg-4 box-img"><img src="image/bootstrap.png" class="rotate-left"></div>
-                <div class="col-lg-4 box-img"><img src="image/js1.png" width="128" height="128"></div>
-                <div class="col-lg-4 box-img"><img src="image/react.png"></div>
+                <div class="col-lg-4 box-img"><img src="image/bootstrap.png" class="rotate-center"></div>
+                <div class="col-lg-4 box-img"><img src="image/js1.png" width="128" height="128" class="shadow-drop-2-lr"></div>
+                <div class="col-lg-4 box-img"><img src="image/react.png" class="shadow-pop-bl"></div>
             </div>
         </section>
         <!-- Project Section -->
@@ -98,19 +102,21 @@
             </div>
             <div class="project-info">
                 <div class="row">
-                    <div class="col text-right">
-                        <img src="" width="400" height="400" style="background-color: green;">
+                    <div class="col-lg-6 text-right">
+                        <a href="https://elastic-hopper-220b8b.netlify.com" target="_blank"><img src="Keeper app.png" class="keeper-app"></a>
                     </div>
-                    <div class="col">
-                        <p>RoboFriend</p>
+                    <div class="col-lg-6">
+                        <h2>The Keeper App</h2>
+                        <p>The Keeper App is a simple Google Keep like app that can store notes. This web app is made by using HTML5, CSS3, Javascript and React as a whole.<p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col text-right">
-                        <img src="" width="400" height="400" style="background-color: red;">
+                    <div class="col-lg-6 text-right">
+                        <a href="https://boring-gates-fc8ac2.netlify.com" target="_blank"><img src="UnitConverter.png" class="unit-converter"></a>
                     </div>
-                    <div class="col">
-                        <p>FaceRecognition</p>
+                    <div class="col-lg-6">
+                        <h2>Simple Unit Converter</h2>
+                        <p>Simple Unit Converter is a web app that can convert any unit available. This web app is made by using HTML5, CSS3, Javascript and React as a whole.<p>
                     </div>
                 </div>
             </div>
